--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -164,7 +164,7 @@
 				<li><a rel="external" target="_blank" href="http://www.fogogaucho.co.ke/">Fogo Gaucho</a>: Brazilian steakhouse serving nyama choma</li>
 				<li><a rel="external" target="_blank" href="https://saritexpo.com/">Sarit Center</a> food court: a mall food court with an open roof and food and beer</li>
 				<li><a rel="external" target="_blank" href="https://craftychameleon.co.ke/">Crafty Chameleon</a>: beer garden</li>
-				<li><a rel="external" target="_blank" href="https://goo.gl/maps/FQcKdWPA3Ki7Xkwo8">K'Osewe Ranalo</a>: cafeteria-style Kenyan food in downtown with open-roof seating</li>
+				<li><a rel="external" target="_blank" href="https://goo.gl/maps/FQcKdWPA3Ki7Xkwo8">K'Osewe Ranalo</a>: cafeteria-style Kenyan food downtown with open-roof seating</li>
 				<li><a rel="external" target="_blank" href="http://www.havana.co.ke/">Havana</a>: Mexican-Kenyan fusion with creative tacos</li>
 				<li><a rel="external" target="_blank" href="https://maps.app.goo.gl/YgHSXvNuuznL6BVG9">Nargis</a>: Indian barbecue</li>
 				<li><a rel="external" target="_blank" href="https://www.chimekhouse.com/">Chimek</a>: Korean</li>
