--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -111,7 +111,7 @@
 			<h2>Housing</h2>
 			<p>Facebook groups are a great tool to find housing. Avoid the Kenya Craigslist.</p>
 
-			<p>Neighborhoods I would recommend: Parklands, Westlands, Kilimani, Lavington, Kilileshwa, New Kitisuru, and Spring Valley. These are nice, affordable compared to many U.S. cities, and near fun nightlife. For example, the first place I lived in Kenya was a mansion in a gated community in Spring Valley with three flatmates. The rent was $830 per month and included a gardener, house help that came three times a week, a backup generator for load shedding, and basic utilities. It's by far the nicest place I've ever lived for one of the cheapest rents.</p>
+			<p>Neighborhoods I recommend: Parklands, Westlands, Kilimani, Lavington, Kilileshwa, New Kitisuru, and Spring Valley. These are nice, affordable compared to many U.S. cities, and near fun nightlife. For example, the first place I lived in Kenya was a mansion in a gated community in Spring Valley with three flatmates. The rent was $830 per month and included a gardener, house help that came three times a week, a backup generator for load shedding, and basic utilities. It's by far the nicest place I've ever lived for one of the cheapest rents.</p>
 
 			<p>There are even nicer neighborhoods in Nairobi: Karen, Runda, Muthaiga, Loresho, and Gigiri. They tend to be further away from the city center and thus quieter, more like extravagant suburbs. There are also plenty of less expensive places like Githurai and Mitini if you like living in denser mixed-use/apartment buildings.</p>
 		</section>
@@ -465,9 +465,9 @@
 			<h3>Between Cities</h3>
 			<p>Moving between cities and regions:</p>
 			<ul>
-				<li>Kenya has a few <b>domestic airlines</b> which are generally safe and cheap. For example, living in Nairobi, you can get to the coast in 45 minutes for around $60. These airlines include Skyward, Jambojet, and Kenya Airways (also international). There are two airports in Nairobi, both of which do some domestic and some international, but in general <b>Jomo Kenyatta International Airport</b> is for international flights, and <b>Wilson Airport</b> is for domestic flights. Wilson is much closer to town, and security and check-in there are less of an ordeal, so if you're flying to the coast and choosing between similarly priced flights at these two airports, choose Wilson and enjoy your life.</li>
+				<li>Kenya has a few <b>domestic airlines</b> which are generally safe and cheap. For example, living in Nairobi, you can get to the coast in 45 minutes for around $60. These airlines include <a rel="external" target="_blank" href="https://www.skywardexpress.co.ke/">Skyward</a>, <a rel="external" target="_blank" href="https://www.jambojet.com/en-us">Jambojet</a>, <a rel="external" target="_blank" href="https://flysafarilink.com/">Safarilink</a>, and <a rel="external" target="_blank" href="https://www.kenya-airways.com/en-ke/">Kenya Airways</a> (also international). There are two airports in Nairobi, both of which do some domestic and some international, but in general <b>Jomo Kenyatta International Airport</b> is for international flights, and <b>Wilson Airport</b> is for domestic flights. Wilson is much closer to town, and security and check-in there are less of an ordeal, so if you're flying to the coast and choosing between similarly priced flights at these two airports, choose Wilson and enjoy your life.</li>
 				<li><b>Matatus</b> also go between towns and are generally the cheapest option. I sometimes ride these between towns.</li>
-				<li><b><a rel="external" target="_blank" href="https://krc.co.ke/">Kenya Railways</a></b> is underrated. I use it to go back and forth to the coast. It's about $8 each way, or $30 if you ride first class, but most folks don't like it because it's about the same speed as Amtrak and takes a few hours. That said, you'll likely see giraffes, impalas, and other cool creatures out the window along the way.</li>
+				<li><b><a rel="external" target="_blank" href="https://krc.co.ke/">Kenya Railways</a></b> is underrated. I use it to go back and forth to the coast. It's about $12 each way, or $35 if you ride first class, but most folks don't like it because it's about the same speed as Amtrak and takes a few hours. That said, you'll likely see giraffes, impalas, and other cool creatures out the window along the way.</li>
 			</ul>
 
 			<h3>Jomo Kenyatta International Airport (abbreviated JKIA or NBO)</h3>
@@ -535,6 +535,7 @@
 				<li><a rel="external" target="_blank" href="https://www.discoverafricablog.com/the-maasai-market-nairobi/">Maasai Market</a>: outdoor marketplace to bargain for Kenyan trinkets like paintings, sculptures, and blankets that changes its location based on the day of the week</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/FxdnwYXwYeLLg9816">Toi Market</a>: large marketplace for clothes, groceries, and household items</li>
 				<li><a rel="external" target="_blank" href="https://maps.app.goo.gl/sMDM5bC7bGG427Hy9">Cheche Bookshop and Cafe</a>: my favorite bookstore with delicious cookies, and frequent host of <a rel="external" target="_blank" href="https://www.instagram.com/chechebooks/">community events</a></li>
+				<li><a rel="external" target="_blank" href="https://www.instagram.com/stories/gondwana_ke/">Gondwana</a>: Afro house music festival at different venues each month</li>
 				<li><a rel="external" target="_blank" href="https://www.giraffecentre.org/">Giraffe Center</a>: feed a giraffe from your hands</li>
 				<li><a rel="external" target="_blank" href="https://visit.sheldrickwildlifetrust.org/">Elephant Orphanage</a>: baby elephants; book weeks in advance or overpay for a tour company like <a rel="external" target="_blank" href="https://gracepattecotourskenya.org/">Gracepatt</a></li>
 				<li><a rel="external" target="_blank" href="https://kws.go.ke/parks/nairobi-national-park">Nairobi National Park</a>: massive safari park in the city with wild lions, giraffes, rhinos, etc.</li>
@@ -570,6 +571,8 @@
 				<li><b>Mount Kilimanjaro:</b> tallest mountain in Africa, just south of the border in Tanzania</li>
 			</ul>
 
+			<p>Festivals of note include <a rel="external" target="_blank" href="https://www.kaleidoscope.wtf/https://www.kaleidoscope.wtf/">Kaleidoscope</a>, a coastal electronic music festival; <a rel="external" target="_blank" href="https://nyegenyege.com/">Nyege Nyege</a>, East Africa's largest electronic music festival at the head of the Nile; <a rel="external" target="_blank" href="https://beneaththebaobabs.com/">Beneath the Baobabs</a>, the biggest New Year's Eve party; and <a rel="external" target="_blank" href="https://beneaththebaobabs.com/kisima/">Kisima</a>, a coastal wellness festival.</p>
+
 			<p>The Swahili Coast is home to some of the world's most beautiful beaches. AirBnBs are generally better than hotels, and they often come with a private chef. Travel safely to:</p>
 			<ul>
 				<li><b>Kilifi</b> or <b>Diani</b> by taking the train or plane to Mombasa and hopping on a bus at the train station</li>
@@ -598,7 +601,7 @@
 			<h2>Safaris</h2>
 
 			<h3>Basics</h3>
-			<p>In Kiswahili, "safari" literally means "journey" or "trip." I would recommend using a tour company to plan everything. My favorites are <a rel="external" target="_blank" href="https://expeditionsmaasaisafaris.com/">Expeditions</a> and <a rel="external" target="_blank" href="https://bonfireadventures.com/">Bonfire</a>. These are the important variables:</p>
+			<p>In Kiswahili, "safari" literally means "journey" or "trip." I recommend using a tour company to plan everything. My favorites are <a rel="external" target="_blank" href="https://expeditionsmaasaisafaris.com/">Expeditions</a> and <a rel="external" target="_blank" href="https://bonfireadventures.com/">Bonfire</a>. These are the important variables:</p>
 			<ul>
 				<li><b>Park:</b> The Maasai Mara is the most popular and generally the best option if your goal is to see the most animals, but many other parks are also great, including Amboseli, Naivasha, and Nakuru. Nairobi National Park is also a great budget option.</li>
 				<li><b>Guests:</b> The number, age, and nationality of guests affect the price. Safari vans can comfortably seat up to seven passengers plus the driver. Kids' tickets are typically cheaper than adults'. Kenyan residents pay significantly less than foreigners for both the park entrance fees and hotel. However, if you have at least one resident in your party, you can usually get the hotel to extend the resident rate to everyone in the party.</li>
